--- a/public/css/owl.carousel.css
+++ b/public/css/owl.carousel.css
@@ -28,6 +28,7 @@
 	overflow: hidden;
 	position: relative;
 	width: 100%;
+	text-align: center;
 }
 .owl-carousel .owl-wrapper-outer.autoHeight{
 	-webkit-transition: height 500ms ease-in-out;
