--- a/public/css/app.css
+++ b/public/css/app.css
@@ -238,6 +238,7 @@ h1, .h1 {
     align-items: center;
     letter-spacing: 0.02em;
     transition: ease-out 0.5s;
+    color: #bf925b;
 }
 
 .dashboard-nav-item i {
