--- a/public/css/app.css
+++ b/public/css/app.css
@@ -142,7 +142,7 @@ h1, .h1 {
     top: 0;
     bottom: 0;
     overflow: auto;
-    background-color: #373193;
+    background-image: url("../page/images/layaut.jpg");
 }
 
 .dashboard-compact .dashboard-nav {
@@ -180,7 +180,7 @@ h1, .h1 {
 }
 
 .dashboard-nav {
-    background-color: #443ea2;
+    background-image: url("../page/images/layaut.jpg");
 }
 
 .dashboard-nav a {
@@ -238,13 +238,13 @@ h1, .h1 {
     align-items: center;
     letter-spacing: 0.02em;
     transition: ease-out 0.5s;
-    color: #bf925b;
 }
 
 .dashboard-nav-item i {
     width: 36px;
     font-size: 19px;
     margin-left: -40px;
+    color: #bf925b;
 }
 
 .dashboard-nav-item:hover {
@@ -365,7 +365,7 @@ h1, .h1 {
 
 .dashboard-toolbar {
     min-height: 74px;
-    background-color: #dfdfdf;
+    background-image: url("../page/images/layaut.jpg");
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
